--- a/config/settings.yml.example
+++ b/config/settings.yml.example
@@ -6,6 +6,7 @@ defaults: &defaults
   site_title: Geoauth Instance
   administrator_emails: bob@example.com
   configured_services: [ 'geoserver', 'geonetwork' ]
+  default_redirect_after_login: /autologin
 
 development:
   <<: *defaults
